# hermes-a2a-platform-adapter

./: .gitignore  README.md  __init__.py  adapter.py  agent_card.py  handlers.py  jsonrpc.py  plugin.yaml  pyproject.toml  task_store.py
tests/: test_agent_card.py  test_handlers.py  test_jsonrpc.py  test_task_store.py
