[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hermes-a2a"
version = "0.2.0"
description = "A2A v1 platform adapter for Hermes Agent — agent discovery and interop via JSON-RPC"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["aiohttp>=3.9"]

[project.urls]
Repository = "https://github.com/ThousandFacedHero/hermes-a2a-platform-adapter"

[tool.hatch.build.targets.wheel]
packages = ["."]
exclude = ["tests/", "dist/", ".gitignore", ".pytest_cache/"]

[tool.hatch.build.targets.sdist]
exclude = ["tests/", "dist/", ".pytest_cache/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
